--- a/template.html
+++ b/template.html
@@ -305,6 +305,7 @@
             </label><br>
           </div>
             <hr class="afstanspakkemoenster"><br>
+            <div class="sensorinfoknap">
 
             <!-- infoknap -->
               <button id="myBtn"></button>
@@ -331,8 +332,9 @@
                     <p>Navngiv den palle du vil have maskinen til at pakke.</p>
                     <img class="infografi" src="img/infoknap.png">
                   </div>
+                </div>
               </div>
-              
+
             <label for="fname">Sensor Min. Negativ Margin:</label><br>
             <input type="text" id="fname" name="fname" value="mm"><br>
 
@@ -347,9 +349,33 @@
 <button class="accordion"><img src="img/Produkticon-01.png" style="width:20%; float:left">Produkt</button>
  <div class="panel">
 
+   <!-- infoknap -->
+     <button id="myBtn"></button>
+     <div id="myModal" class="modal">
+
+       <!-- popup content -->
+         <div class="infoknap-content">
+           <span class="close">&times;</span>
+           <p>Navngiv den palle du vil have maskinen til at pakke.</p>
+           <img class="infografi" src="img/infoknap.png">
+         </div>
+     </div>
+
 <!-- Produktnavn formularvalg -->
   <label for="fname">Produkt Navn:</label><br>
   <input type="text" id="fname" name="fname" value="Fx. Shampoo"><br><br>
+
+  <!-- infoknap -->
+    <button id="myBtn"></button>
+    <div id="myModal" class="modal">
+
+      <!-- popup content -->
+        <div class="infoknap-content">
+          <span class="close">&times;</span>
+          <p>Navngiv den palle du vil have maskinen til at pakke.</p>
+          <img class="infografi" src="img/infoknap.png">
+        </div>
+    </div>
 
   <label for="fname">Antal:</label><br>
   <input type="text" id="fname" name="fname" value="Fx. 20 kolli"><br><br>
@@ -358,11 +384,50 @@
   <div class="dropdown">
     <button onclick="myFunction4()" class="dropbtn">Pakke Dimensioner</button>
       <div id="myDropdown4" class="dropdown-content">
+
+        <!-- infoknap -->
+          <button id="myBtn"></button>
+          <div id="myModal" class="modal">
+
+            <!-- popup content -->
+              <div class="infoknap-content">
+                <span class="close">&times;</span>
+                <p>Navngiv den palle du vil have maskinen til at pakke.</p>
+                <img class="infografi" src="img/infoknap.png">
+              </div>
+          </div>
+
         <!-- Pakke dimensioner formularvalg -->
         <label for="fname">Pakke Længde:</label><br>
         <input type="text" id="fname" name="fname" value="mm"><br><br>
+
+        <!-- infoknap -->
+          <button id="myBtn"></button>
+          <div id="myModal" class="modal">
+
+            <!-- popup content -->
+              <div class="infoknap-content">
+                <span class="close">&times;</span>
+                <p>Navngiv den palle du vil have maskinen til at pakke.</p>
+                <img class="infografi" src="img/infoknap.png">
+              </div>
+          </div>
+
         <label for="fname">Pakke Højde:</label><br>
         <input type="text" id="fname" name="fname" value="mm"><br><br>
+
+        <!-- infoknap -->
+          <button id="myBtn"></button>
+          <div id="myModal" class="modal">
+
+            <!-- popup content -->
+              <div class="infoknap-content">
+                <span class="close">&times;</span>
+                <p>Navngiv den palle du vil have maskinen til at pakke.</p>
+                <img class="infografi" src="img/infoknap.png">
+              </div>
+          </div>
+
         <label for="fname">Pakke Bredde:</label><br>
         <input type="text" id="fname" name="fname" value="mm"><br>
 
@@ -375,6 +440,19 @@
     <button onclick="myFunction5()" class="dropbtn">Pakke Type</button>
       <div id="myDropdown5" class="dropdown-content">
         <!-- Pakketype formularvalg med valgmuligheder -->
+
+        <!-- infoknap -->
+          <button id="myBtn"></button>
+          <div id="myModal" class="modal">
+
+            <!-- popup content -->
+              <div class="infoknap-content">
+                <span class="close">&times;</span>
+                <p>Navngiv den palle du vil have maskinen til at pakke.</p>
+                <img class="infografi" src="img/infoknap.png">
+              </div>
+          </div>
+
         <label for="fname">Vælg Pakketype</label><br>
           <select id="formularvalg" name="formularvalg">
             <option value="Kasse">Kasse</option>
