--- a/template.html
+++ b/template.html
@@ -348,7 +348,7 @@
 <!-- Produkt accordion -->
 <button class="accordion"><img src="img/Produkticon-01.png" style="width:20%; float:left">Produkt</button>
  <div class="panel">
-
+  <div class="produktnaninfoknap">
    <!-- infoknap -->
      <button id="myBtn"></button>
      <div id="myModal" class="modal">
@@ -379,7 +379,7 @@
 
   <label for="fname">Antal:</label><br>
   <input type="text" id="fname" name="fname" value="Fx. 20 kolli"><br><br>
-
+  </div>
 <!-- Pakkedimensioner dropdown -->
   <div class="dropdown">
     <button onclick="myFunction4()" class="dropbtn">Pakke Dimensioner</button>
@@ -439,6 +439,7 @@
   <div class="dropdown">
     <button onclick="myFunction5()" class="dropbtn">Pakke Type</button>
       <div id="myDropdown5" class="dropdown-content">
+        <div class="pakketypeinfoknap">
         <!-- Pakketype formularvalg med valgmuligheder -->
 
         <!-- infoknap -->
@@ -459,6 +460,7 @@
             <option value="Cylinder">Cylinder</option>
           </select>
       </div>
+    </div>
   </div>
 
   <!-- Tilføj flere produkter accordion (en kopi af original accordian) -->
