--- a/template.html
+++ b/template.html
@@ -57,7 +57,7 @@
         <button id="myBtn"></button>
         <div id="myModal" class="modal">
 
-          <!-- popup content-->
+          <!-- popup contentt -->
             <div class="infoknap-content">
               <span class="close">&times;</span>
               <p>Navngiv den palle du vil have maskinen til at pakke.</p>
