infoknap der virker

--- a/template.html
+++ b/template.html
@@ -54,8 +54,9 @@
 
 
       <!-- infoknap -->
-        <button id="myBtn"></button>
-        <div id="myModal" class="modal">
+        <button class="modal-button" href="#myModal1"></button>
+
+        <div id="myModal1" class="modal">
 
           <!-- popup content-->
             <div class="infoknap-content">
@@ -69,17 +70,17 @@
         <label for="fname">Palle Navn:</label><br>
         <input type="text" id="fname" name="fname" value="Fx. Shampoo levering"><br><br>
 
-      <!-- infoknap -->
-        <button id="myBtn"></button>
-        <div id="myModal" class="modal">
+        <!-- infoknap -->
+          <button class="modal-button" href="#myModal2"></button>
 
-          <!-- popup content -->
-            <div class="infoknap-content">
-              <span class="close">&times;</span>
-              <p>Navngiv den palle du vil have maskinen til at pakke.</p>
-              <img class="infografi" src="img/infoknap.png">
-            </div>
-        </div>
+          <div id="myModal2" class="modal">
+
+            <!-- popup content-->
+              <div class="infoknap-content">
+                <span class="close">&times;</span>
+                <p> her er nr 2 side.</p>
+                <img class="infografi" src="img/infoknap.png">
+              </div>
     </div>
       <!-- Palletype formularvalg -->
       <label for="fname">Palle Type:</label><br>
