nye og forbedret infoknapper

--- a/template.html
+++ b/template.html
@@ -50,7 +50,7 @@
 <!-- Palle accordion -->
 <button class="accordion"><img src="img/Palleicon-01.png" style="width:20%; float:left">Palle</button>
  <div class="panel">
-   <div class="palleinfo">
+
 
 
       <!-- infoknap -->
@@ -62,7 +62,6 @@
             <div class="infoknap-content">
               <span class="close">&times;</span>
               <p>Navngiv den palle du vil have maskinen til at pakke.</p>
-              <img class="infografi" src="img/infoknap.png">
             </div>
 
         </div>
@@ -72,16 +71,15 @@
 
         <!-- infoknap -->
           <button class="modal-button" href="#myModal2"></button>
-
           <div id="myModal2" class="modal">
-
             <!-- popup content-->
               <div class="infoknap-content">
                 <span class="close">&times;</span>
-                <p> her er nr 2 side.</p>
-                <img class="infografi" src="img/infoknap.png">
+                <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+                <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
               </div>
-    </div>
+          </div>
+
       <!-- Palletype formularvalg -->
       <label for="fname">Palle Type:</label><br>
       <select id="formularvalg" name="formularvalg">
@@ -97,14 +95,13 @@
           <div id="myDropdown" class="dropdown-content">
 
             <!-- infoknap -->
-              <button id="myBtn"></button>
-              <div id="myModal" class="modal">
-
-                <!-- popup content -->
+              <button class="modal-button" href="#myModal2"></button>
+              <div id="myModal2" class="modal">
+                <!-- popup content-->
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
-                    <p>Navngiv den palle du vil have maskinen til at pakke.</p>
-                    <img class="infografi" src="img/infoknap.png">
+                    <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+                    <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
                   </div>
               </div>
 
@@ -112,31 +109,31 @@
             <input type="text" id="fname" name="fname" value="mm"><br><br>
 
             <!-- infoknap -->
-              <button id="myBtn"></button>
-              <div id="myModal" class="modal">
-
-                <!-- popup content -->
+              <button class="modal-button" href="#myModal2"></button>
+              <div id="myModal2" class="modal">
+                <!-- popup content-->
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
-                    <p>Navngiv den palle du vil have maskinen til at pakke.</p>
-                    <img class="infografi" src="img/infoknap.png">
+                    <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+                    <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
                   </div>
               </div>
+
 
             <label for="fname">Fyldnings Procent:</label><br>
             <input type="text" id="fname" name="fname" value="%"><br><br>
 
             <!-- infoknap -->
-              <button id="myBtn"></button>
-              <div id="myModal" class="modal">
-
-                <!-- popup content -->
+              <button class="modal-button" href="#myModal2"></button>
+              <div id="myModal2" class="modal">
+                <!-- popup content-->
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
-                    <p>Navngiv den palle du vil have maskinen til at pakke.</p>
-                    <img class="infografi" src="img/infoknap.png">
+                    <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+                    <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
                   </div>
               </div>
+
 
             <label for="fname">Tilladt Udhæng:</label><br>
             <input type="text" id="fname" name="fname" value="mm"><br>
@@ -149,14 +146,13 @@
           <div id="myDropdown2" class="dropdown-content">
 
             <!-- infoknap -->
-              <button id="myBtn"></button>
-              <div id="myModal" class="modal">
-
-                <!-- popup content -->
+              <button class="modal-button" href="#myModal2"></button>
+              <div id="myModal2" class="modal">
+                <!-- popup content-->
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
-                    <p>Navngiv den palle du vil have maskinen til at pakke.</p>
-                    <img class="infografi" src="img/infoknap.png">
+                    <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+                    <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
                   </div>
               </div>
 
@@ -164,14 +160,13 @@
             <input type="text" id="fname" name="fname" value="mm"><br><br>
 
             <!-- infoknap -->
-              <button id="myBtn"></button>
-              <div id="myModal" class="modal">
-
-                <!-- popup content -->
+              <button class="modal-button" href="#myModal2"></button>
+              <div id="myModal2" class="modal">
+                <!-- popup content-->
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
-                    <p>Navngiv den palle du vil have maskinen til at pakke.</p>
-                    <img class="infografi" src="img/infoknap.png">
+                    <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+                    <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
                   </div>
               </div>
 
@@ -179,14 +174,13 @@
             <input type="text" id="fname" name="fname" value="mm"><br><br>
 
             <!-- infoknap -->
-              <button id="myBtn"></button>
-              <div id="myModal" class="modal">
-
-                <!-- popup content -->
+              <button class="modal-button" href="#myModal2"></button>
+              <div id="myModal2" class="modal">
+                <!-- popup content-->
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
-                    <p>Navngiv den palle du vil have maskinen til at pakke.</p>
-                    <img class="infografi" src="img/infoknap.png">
+                    <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+                    <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
                   </div>
               </div>
 
@@ -199,19 +193,17 @@
       <div class="dropdown">
         <button onclick="myFunction3()" class="dropbtn">Pakke Mønster</button>
           <div id="myDropdown3" class="dropdown-content">
-            <div class="palledimensionerinfoknap"
             <p> Kryds venligst kun 1 felt af <p> <br>
             <!-- afkrydsningsfelter -->
 
             <!-- infoknap -->
-              <button id="myBtn"></button>
-              <div id="myModal" class="modal">
-
-                <!-- popup content -->
+              <button class="modal-button" href="#myModal2"></button>
+              <div id="myModal2" class="modal">
+                <!-- popup content-->
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
-                    <p>Navngiv den palle du vil have maskinen til at pakke.</p>
-                    <img class="infografi" src="img/infoknap.png">
+                    <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+                    <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
                   </div>
               </div>
 
@@ -221,14 +213,13 @@
             </label>
 
             <!-- infoknap -->
-              <button id="myBtn"></button>
-              <div id="myModal" class="modal">
-
-                <!-- popup content -->
+              <button class="modal-button" href="#myModal2"></button>
+              <div id="myModal2" class="modal">
+                <!-- popup content-->
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
-                    <p>Navngiv den palle du vil have maskinen til at pakke.</p>
-                    <img class="infografi" src="img/infoknap.png">
+                    <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+                    <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
                   </div>
               </div>
 
@@ -238,14 +229,13 @@
             </label>
 
             <!-- infoknap -->
-              <button id="myBtn"></button>
-              <div id="myModal" class="modal">
-
-                <!-- popup content -->
+              <button class="modal-button" href="#myModal2"></button>
+              <div id="myModal2" class="modal">
+                <!-- popup content-->
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
-                    <p>Navngiv den palle du vil have maskinen til at pakke.</p>
-                    <img class="infografi" src="img/infoknap.png">
+                    <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+                    <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
                   </div>
               </div>
 
@@ -255,14 +245,13 @@
             </label>
 
             <!-- infoknap -->
-              <button id="myBtn"></button>
-              <div id="myModal" class="modal">
-
-                <!-- popup content -->
+              <button class="modal-button" href="#myModal2"></button>
+              <div id="myModal2" class="modal">
+                <!-- popup content-->
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
-                    <p>Navngiv den palle du vil have maskinen til at pakke.</p>
-                    <img class="infografi" src="img/infoknap.png">
+                    <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+                    <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
                   </div>
               </div>
 
@@ -272,14 +261,13 @@
             </label>
 
             <!-- infoknap -->
-              <button id="myBtn"></button>
-              <div id="myModal" class="modal">
-
-                <!-- popup content -->
+              <button class="modal-button" href="#myModal2"></button>
+              <div id="myModal2" class="modal">
+                <!-- popup content-->
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
-                    <p>Navngiv den palle du vil have maskinen til at pakke.</p>
-                    <img class="infografi" src="img/infoknap.png">
+                    <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+                    <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
                   </div>
               </div>
 
@@ -289,14 +277,13 @@
             </label>
 
             <!-- infoknap -->
-              <button id="myBtn"></button>
-              <div id="myModal" class="modal">
-
-                <!-- popup content -->
+              <button class="modal-button" href="#myModal2"></button>
+              <div id="myModal2" class="modal">
+                <!-- popup content-->
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
-                    <p>Navngiv den palle du vil have maskinen til at pakke.</p>
-                    <img class="infografi" src="img/infoknap.png">
+                    <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+                    <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
                   </div>
               </div>
 
@@ -304,44 +291,39 @@
               <input type="checkbox" >
               <span class="checkmark"></span>
             </label><br>
-          </div>
             <hr class="afstanspakkemoenster"><br>
-            <div class="sensorinfoknap">
 
-            <!-- infoknap -->
-              <button id="myBtn"></button>
-              <div id="myModal" class="modal">
-
-                <!-- popup content -->
-                  <div class="infoknap-content">
-                    <span class="close">&times;</span>
-                    <p>Navngiv den palle du vil have maskinen til at pakke.</p>
-                    <img class="infografi" src="img/infoknap.png">
-                  </div>
-              </div>
+              <!-- infoknap -->
+                <button class="modal-button" href="#myModal2"></button>
+                <div id="myModal2" class="modal">
+                  <!-- popup content-->
+                    <div class="infoknap-content">
+                      <span class="close">&times;</span>
+                      <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+                      <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
+                    </div>
+                </div>
 
             <label for="fname">Sensor Maks. Positiv Margin:</label><br>
             <input type="text" id="fname" name="fname" value="mm"><br><br>
 
             <!-- infoknap -->
-              <button id="myBtn"></button>
-              <div id="myModal" class="modal">
-
-                <!-- popup content -->
+              <button class="modal-button" href="#myModal2"></button>
+              <div id="myModal2" class="modal">
+                <!-- popup content-->
                   <div class="infoknap-content">
                     <span class="close">&times;</span>
-                    <p>Navngiv den palle du vil have maskinen til at pakke.</p>
-                    <img class="infografi" src="img/infoknap.png">
+                    <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+                    <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
                   </div>
-                </div>
               </div>
+
 
             <label for="fname">Sensor Min. Negativ Margin:</label><br>
             <input type="text" id="fname" name="fname" value="mm"><br>
 
           </div>
       </div>
- </div>
 </div>
 
 
