--- a/template.html
+++ b/template.html
@@ -332,52 +332,48 @@
 <!-- Produkt accordion -->
 <button class="accordion"><img src="img/Produkticon-01.png" style="width:20%; float:left">Produkt</button>
  <div class="panel">
-  <div class="produktnaninfoknap">
-   <!-- infoknap -->
-     <button id="myBtn"></button>
-     <div id="myModal" class="modal">
-
-       <!-- popup content -->
-         <div class="infoknap-content">
-           <span class="close">&times;</span>
-           <p>Navngiv den palle du vil have maskinen til at pakke.</p>
-           <img class="infografi" src="img/infoknap.png">
-         </div>
-     </div>
+    <!-- infoknap -->
+      <button class="modal-button" href="#myModal2"></button>
+      <div id="myModal2" class="modal">
+        <!-- popup content-->
+          <div class="infoknap-content">
+            <span class="close">&times;</span>
+            <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+            <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
+          </div>
+      </div>
 
 <!-- Produktnavn formularvalg -->
   <label for="fname">Produkt Navn:</label><br>
   <input type="text" id="fname" name="fname" value="Fx. Shampoo"><br><br>
 
   <!-- infoknap -->
-    <button id="myBtn"></button>
-    <div id="myModal" class="modal">
-
-      <!-- popup content -->
+    <button class="modal-button" href="#myModal2"></button>
+    <div id="myModal2" class="modal">
+      <!-- popup content-->
         <div class="infoknap-content">
           <span class="close">&times;</span>
-          <p>Navngiv den palle du vil have maskinen til at pakke.</p>
-          <img class="infografi" src="img/infoknap.png">
+          <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+          <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
         </div>
     </div>
 
   <label for="fname">Antal:</label><br>
   <input type="text" id="fname" name="fname" value="Fx. 20 kolli"><br><br>
-  </div>
+
 <!-- Pakkedimensioner dropdown -->
   <div class="dropdown">
     <button onclick="myFunction4()" class="dropbtn">Pakke Dimensioner</button>
       <div id="myDropdown4" class="dropdown-content">
 
         <!-- infoknap -->
-          <button id="myBtn"></button>
-          <div id="myModal" class="modal">
-
-            <!-- popup content -->
+          <button class="modal-button" href="#myModal2"></button>
+          <div id="myModal2" class="modal">
+            <!-- popup content-->
               <div class="infoknap-content">
                 <span class="close">&times;</span>
-                <p>Navngiv den palle du vil have maskinen til at pakke.</p>
-                <img class="infografi" src="img/infoknap.png">
+                <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+                <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
               </div>
           </div>
 
@@ -386,14 +382,13 @@
         <input type="text" id="fname" name="fname" value="mm"><br><br>
 
         <!-- infoknap -->
-          <button id="myBtn"></button>
-          <div id="myModal" class="modal">
-
-            <!-- popup content -->
+          <button class="modal-button" href="#myModal2"></button>
+          <div id="myModal2" class="modal">
+            <!-- popup content-->
               <div class="infoknap-content">
                 <span class="close">&times;</span>
-                <p>Navngiv den palle du vil have maskinen til at pakke.</p>
-                <img class="infografi" src="img/infoknap.png">
+                <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+                <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
               </div>
           </div>
 
@@ -401,14 +396,13 @@
         <input type="text" id="fname" name="fname" value="mm"><br><br>
 
         <!-- infoknap -->
-          <button id="myBtn"></button>
-          <div id="myModal" class="modal">
-
-            <!-- popup content -->
+          <button class="modal-button" href="#myModal2"></button>
+          <div id="myModal2" class="modal">
+            <!-- popup content-->
               <div class="infoknap-content">
                 <span class="close">&times;</span>
-                <p>Navngiv den palle du vil have maskinen til at pakke.</p>
-                <img class="infografi" src="img/infoknap.png">
+                <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+                <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
               </div>
           </div>
 
@@ -423,18 +417,15 @@
   <div class="dropdown">
     <button onclick="myFunction5()" class="dropbtn">Pakke Type</button>
       <div id="myDropdown5" class="dropdown-content">
-        <div class="pakketypeinfoknap">
         <!-- Pakketype formularvalg med valgmuligheder -->
-
         <!-- infoknap -->
-          <button id="myBtn"></button>
-          <div id="myModal" class="modal">
-
-            <!-- popup content -->
+          <button class="modal-button" href="#myModal2"></button>
+          <div id="myModal2" class="modal">
+            <!-- popup content-->
               <div class="infoknap-content">
                 <span class="close">&times;</span>
-                <p>Navngiv den palle du vil have maskinen til at pakke.</p>
-                <img class="infografi" src="img/infoknap.png">
+                <p> Skriv eller vælg den palle type du vil have maskinen til at pakke.</p>
+                <img class="infografi" src="img/instruk-del1.jpg" width="100%" height="auto">
               </div>
           </div>
 
@@ -443,7 +434,6 @@
             <option value="Kasse">Kasse</option>
             <option value="Cylinder">Cylinder</option>
           </select>
-      </div>
     </div>
   </div>
 
